# Logging-System

./: CMakeLists.txt  README.md
data/: delete_cards.txt  log_5834.txt  log_641.txt
include/: hash.h  logging_system.h  sort.h  types.h
src/: hash.c  logging_system.c  sort.c
